<resources>
    <string name="app_name">VisionUP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_products">VisionUp</string>
    <string name="title_home">Trang Chủ</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Tài Khoản</string>
    <string name="default_web_client_id">299191069889-jm8q0h5m80c69stdd6llrgk7jghc79lp.apps.googleusercontent.com</string>
    <string name="message">Lịch sử đơn Hàng</string>
    <string name="title_result">Kết quả</string>
    <string name="title_map">Ki-ốt</string>
    <string name="title_test">Kiểm Tra Mắt</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="language_switch">Switch Language</string>
    <string name="language_changed">Language has been changed</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="description">These full-rim metal frames are currently hot fashion for women and men. The on-trend frame-shape of St. Michael S brings extra elegance with the tasteful Rose Gold finish. The lightweight materials give you extra comfort with adjustable nose pads, for an easy-to-wear comfortable fit</string>
    <string name="subTitle">Popular frame! 313 people have their eyes on this frame.</string>
    <string name="star">star</string>
    <string name="user_icon_desc">user_icon_desc</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="gland_total">Gland Total</string>
    <string name="shipment_cost">Shipment cost</string>
    <string name="vnd">VND</string>
    <string name="select_user">Select User</string>
    <string name="app_name1">App Name</string>

    <string-array name="status_array">
        <item>Chưa chọn</item>
        <item>Yêu cầu</item>
        <item>Bị từ chối</item>
        <item>Được chấp nhận</item>
    </string-array>
    <string-array name="type_array">
        <item>Chưa chọn</item>
        <item>Vấn đề sản phẩm</item>
        <item>Vấn đề giao hàng</item>
        <item>Vấn đề khách hàng</item>
        <item>Dịch vụ khách hàng</item>
        <item>Khác</item>
    </string-array>
    <string-array name="report_types">
        <item>Vấn đề sản phẩm</item>
        <item>Vấn đề giao hàng</item>
        <item>Vấn đề khách hàng</item>
        <item>Dịch vụ khách hàng</item>
        <item>Khác</item>
    </string-array>
</resources>