<?xml version="1.0" encoding="utf-8"?>
<!--    nav_graph-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.glass_project.product.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.glass_project.product.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
    android:id="@+id/navigation_eye_check"
    android:name="com.example.glass_project.product.ui.eyeCheck.EyeCheckFragment"
    android:label="@string/title_test"
    tools:layout="@layout/fragment_eye_check" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.glass_project.product.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>
